packages/sdk/tests/fixtures/negative/self-framework-node-environment-extension.fixture.ts
import "@deepwork/sdk";
import "react";
import "node:fs";
import "./missing-extension";

void process.env.FIXTURE_ONLY;
